--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
     "react-spring": "^9.7.3",
+    "react-toastify": "^10.0.4",
     "swiper": "^11.0.5",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.3"
